docs/css/app.css
body {
    font-family: IBMPlexSans;
    background: #FAFBFA;
}
#outer-frame {
    display: table;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    padding: 0;
    margin: 0;
}
#inner-frame {
    display: table-cell;
    vertical-align: middle;
    padding-top: 3em;
    padding-bottom: 3em;
    margin: 0;
}
code {
    font-family: IBMPlexMono;
}
header {
    text-align: center;
}
.container {
    margin: 2em;
}
footer {
    font-size: 0.9375em;
    text-align: center;
    color: #BFBFBF;
}
.footer-link {
    color: #BFBFBF;
    text-decoration: none;
}
.footer-link:hover {
    color: #A0A0A0;
    text-decoration: underline;
}
#logo {
    width: 50px;
}
#logo:hover {
    filter: drop-shadow(0px 1px 0.25px rgba(0, 0, 0, 0.45));
}
.flex-reverse {
    display: flex;
    flex-direction: column-reverse;
}
.screen-wrapper {
    box-sizing: border-box;
    min-height: 60vh;
    max-height: 60vh;
    overflow-y: scroll;
    position: relative;
    margin-bottom: 1em;
    border-style: solid;
    border-color: grey;
    border-radius: 3px;
    border-width: 1px;
    background: #F5F5DC;
}
.welcome-screen {
    width: 68%;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 1em;
}
.welcome-title {
    font-size: 1.5em;
    font-weight: normal;
}
.screen {
    padding-left: 1em;
    padding-right: 1em;
}
ul li {
    list-style-type: none;
}
.entry {
    font-family: IBMPlexMono;
    font-size: 1em;
    margin: 0;
    word-break: break-all;
    white-space: normal;
}
#command-line {
    width: 100%;
    box-sizing: border-box;
    padding: 3px;
    border-style: solid;
    border-color: grey;
    border-radius: 3px;
    border-width: 1px;
    font-family: IBMPlexMono;
    font-size: 1em;
    background: #F5F5DC;
}
@media (min-width: 900px) {
    .welcome-screen {
        width: 500px;
    }
    .container {
        margin-left: 10vw;
        margin-right: 10vw;
    }
}

